# raytracing

./: CMakeLists.txt  README.md  image.ppm  main.cc  makey.ps1  ray.h
experimental renders/: better_colours.ppm
